--- a/TravelBlogs.DAL/TravelBlogs.DAL.csproj
+++ b/TravelBlogs.DAL/TravelBlogs.DAL.csproj
@@ -70,11 +70,22 @@
     <Compile Include="Entities\Vote.cs" />
     <Compile Include="Identity\ApplicationRoleManagercs.cs" />
     <Compile Include="Identity\ApplicationUserManager.cs" />
+    <Compile Include="Interfaces\ICommentRepository.cs" />
+    <Compile Include="Interfaces\ICountryRepository.cs" />
+    <Compile Include="Interfaces\IPlaceRepository.cs" />
+    <Compile Include="Interfaces\IPostRepository.cs" />
+    <Compile Include="Interfaces\IProfileRepository.cs" />
+    <Compile Include="Interfaces\IRegionRepository.cs" />
     <Compile Include="Interfaces\IRepository.cs" />
     <Compile Include="Interfaces\IUnitOfWork.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Repositories\CommentRepository.cs" />
     <Compile Include="Repositories\CountryRepository.cs" />
+    <Compile Include="Repositories\EFUnitOfWork.cs" />
+    <Compile Include="Repositories\PlaceRepository.cs" />
+    <Compile Include="Repositories\PostRepository.cs" />
+    <Compile Include="Repositories\ProfileRepository.cs" />
+    <Compile Include="Repositories\RegionRepository.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
