--- a/TravelBlogs.BLL/TravelBlogs.BLL.csproj
+++ b/TravelBlogs.BLL/TravelBlogs.BLL.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{C26727F6-F96E-485E-9A25-A851E62F1C54}</ProjectGuid>
+    <ProjectGuid>{E21CB7F1-622A-4E24-A47B-8214FA2DF52A}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>TravelBlogs.DAL</RootNamespace>
-    <AssemblyName>TravelBlogs.DAL</AssemblyName>
+    <RootNamespace>TravelBlogs.BLL</RootNamespace>
+    <AssemblyName>TravelBlogs.BLL</AssemblyName>
     <TargetFrameworkVersion>v4.5.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -30,20 +30,16 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="AutoMapper, Version=5.1.1.0, Culture=neutral, PublicKeyToken=be96cd2c38ef1005, processorArchitecture=MSIL">
+      <HintPath>..\packages\AutoMapper.5.1.1\lib\net45\AutoMapper.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
       <HintPath>..\packages\EntityFramework.6.1.3\lib\net45\EntityFramework.dll</HintPath>
       <Private>True</Private>
     </Reference>
     <Reference Include="EntityFramework.SqlServer, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
       <HintPath>..\packages\EntityFramework.6.1.3\lib\net45\EntityFramework.SqlServer.dll</HintPath>
-      <Private>True</Private>
-    </Reference>
-    <Reference Include="Microsoft.AspNet.Identity.Core, Version=2.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
-      <HintPath>..\packages\Microsoft.AspNet.Identity.Core.2.2.1\lib\net45\Microsoft.AspNet.Identity.Core.dll</HintPath>
-      <Private>True</Private>
-    </Reference>
-    <Reference Include="Microsoft.AspNet.Identity.EntityFramework, Version=2.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
-      <HintPath>..\packages\Microsoft.AspNet.Identity.EntityFramework.2.2.1\lib\net45\Microsoft.AspNet.Identity.EntityFramework.dll</HintPath>
       <Private>True</Private>
     </Reference>
     <Reference Include="System" />
@@ -56,44 +52,32 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="EF\BlogContext.cs" />
-    <Compile Include="Entities\ApplicationRole.cs" />
-    <Compile Include="Entities\ApplicationUser.cs" />
-    <Compile Include="Entities\Comment.cs" />
-    <Compile Include="Entities\Country.cs" />
-    <Compile Include="Entities\Follower.cs" />
-    <Compile Include="Entities\Place.cs" />
-    <Compile Include="Entities\Post.cs" />
-    <Compile Include="Entities\Profile.cs" />
-    <Compile Include="Entities\Region.cs" />
-    <Compile Include="Entities\ReplyToComment.cs" />
-    <Compile Include="Entities\Vote.cs" />
-    <Compile Include="Identity\ApplicationRoleManagercs.cs" />
-    <Compile Include="Identity\ApplicationUserManager.cs" />
-    <Compile Include="Interfaces\ICommentRepository.cs" />
-    <Compile Include="Interfaces\ICountryRepository.cs" />
-    <Compile Include="Interfaces\IFollowerRepository.cs" />
-    <Compile Include="Interfaces\IPlaceRepository.cs" />
-    <Compile Include="Interfaces\IPostRepository.cs" />
-    <Compile Include="Interfaces\IProfileRepository.cs" />
-    <Compile Include="Interfaces\IRegionRepository.cs" />
-    <Compile Include="Interfaces\IRepository.cs" />
-    <Compile Include="Interfaces\IUnitOfWork.cs" />
+    <Compile Include="DTO\CommentDTO.cs" />
+    <Compile Include="DTO\CountryDTO.cs" />
+    <Compile Include="DTO\FollowerDTO.cs" />
+    <Compile Include="DTO\PlaceDTO.cs" />
+    <Compile Include="DTO\PostDTO.cs" />
+    <Compile Include="DTO\ProfileDTO.cs" />
+    <Compile Include="DTO\RegionDTO.cs" />
+    <Compile Include="DTO\ReplayToCommentDTO.cs" />
+    <Compile Include="DTO\RoleDTO.cs" />
+    <Compile Include="DTO\UserDTO.cs" />
+    <Compile Include="DTO\VoteDTO.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Repositories\CommentRepository.cs" />
-    <Compile Include="Repositories\CountryRepository.cs" />
-    <Compile Include="Repositories\EFUnitOfWork.cs" />
-    <Compile Include="Repositories\FollowerRepository.cs" />
-    <Compile Include="Repositories\PlaceRepository.cs" />
-    <Compile Include="Repositories\PostRepository.cs" />
-    <Compile Include="Repositories\ProfileRepository.cs" />
-    <Compile Include="Repositories\RegionRepository.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\TravelBlogs.DAL\TravelBlogs.DAL.csproj">
+      <Project>{c26727f6-f96e-485e-9a25-a851e62f1c54}</Project>
+      <Name>TravelBlogs.DAL</Name>
+    </ProjectReference>
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
     <None Include="packages.config" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <Folder Include="Interfaces\" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
