--- a/TravelBlogs.WEB/TravelBlogs.WEB.csproj
+++ b/TravelBlogs.WEB/TravelBlogs.WEB.csproj
@@ -39,6 +39,10 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="AutoMapper, Version=5.1.1.0, Culture=neutral, PublicKeyToken=be96cd2c38ef1005, processorArchitecture=MSIL">
+      <HintPath>..\packages\AutoMapper.5.1.1\lib\net45\AutoMapper.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
       <HintPath>..\packages\EntityFramework.6.1.3\lib\net45\EntityFramework.dll</HintPath>
       <Private>True</Private>
@@ -141,7 +145,6 @@
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
     <Compile Include="Infrastructure\NinjectDependencyResolver.cs" />
-    <Compile Include="Infrastructure\TravelModule.cs" />
     <Compile Include="Models\CommentViewModel.cs" />
     <Compile Include="Models\CountryViewModel.cs" />
     <Compile Include="Models\FollowerViewModel.cs" />
@@ -191,6 +194,7 @@
     <Content Include="Views\Home\Contact.cshtml" />
     <Content Include="Views\Home\Index.cshtml" />
     <Content Include="Scripts\jquery-1.10.2.min.map" />
+    <Content Include="Views\Home\Add.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
@@ -203,9 +207,9 @@
     <None Include="Project_Readme.html" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\TravelBlogs.DAL\TravelBlogs.DAL.csproj">
-      <Project>{c26727f6-f96e-485e-9a25-a851e62f1c54}</Project>
-      <Name>TravelBlogs.DAL</Name>
+    <ProjectReference Include="..\TravelBlogs.BLL\TravelBlogs.BLL.csproj">
+      <Project>{d469bcef-43d7-4e62-aa7f-fc0aeb63292d}</Project>
+      <Name>TravelBlogs.BLL</Name>
     </ProjectReference>
   </ItemGroup>
   <PropertyGroup>
