--- a/TravelBlogs.DAL/TravelBlogs.DAL.csproj
+++ b/TravelBlogs.DAL/TravelBlogs.DAL.csproj
@@ -67,7 +67,7 @@
     <Compile Include="Entities\Post.cs" />
     <Compile Include="Entities\Profile.cs" />
     <Compile Include="Entities\Region.cs" />
-    <Compile Include="Entities\ReplyToComment.cs" />
+    <Compile Include="Entities\ReplayToComment.cs" />
     <Compile Include="Entities\Vote.cs" />
     <Compile Include="Identity\ApplicationRoleManagercs.cs" />
     <Compile Include="Identity\ApplicationUserManager.cs" />
