--- a/TravelBlogs.BLL/TravelBlogs.BLL.csproj
+++ b/TravelBlogs.BLL/TravelBlogs.BLL.csproj
@@ -76,7 +76,7 @@
     <Compile Include="DTO\RoleDTO.cs" />
     <Compile Include="DTO\UserDTO.cs" />
     <Compile Include="DTO\VoteDTO.cs" />
-    <Compile Include="Infrastructure\AutoMapperConfig.cs" />
+    <Compile Include="Infrastructure\AutoMapperBLLConfig.cs" />
     <Compile Include="Infrastructure\ServiceModule.cs" />
     <Compile Include="Infrastructure\ValidationException.cs" />
     <Compile Include="Interfaces\ICommentService.cs" />
