--- a/TravelBlogs.WEB/packages.config
+++ b/TravelBlogs.WEB/packages.config
@@ -7,6 +7,7 @@
   <package id="jQuery" version="1.10.2" targetFramework="net451" />
   <package id="jQuery.Validation" version="1.11.1" targetFramework="net451" />
   <package id="Microsoft.AspNet.Identity.Core" version="2.2.1" targetFramework="net451" />
+  <package id="Microsoft.AspNet.Identity.EntityFramework" version="2.2.1" targetFramework="net451" />
   <package id="Microsoft.AspNet.Identity.Owin" version="2.2.1" targetFramework="net451" />
   <package id="Microsoft.AspNet.Mvc" version="5.2.3" targetFramework="net451" />
   <package id="Microsoft.AspNet.Mvc.ru" version="5.2.3" targetFramework="net451" />
