--- a/TravelBlogs.BLL/TravelBlogs.BLL.csproj
+++ b/TravelBlogs.BLL/TravelBlogs.BLL.csproj
@@ -105,15 +105,18 @@
     <Compile Include="DTO\UserDTO.cs" />
     <Compile Include="DTO\VoteDTO.cs" />
     <Compile Include="Infrastructure\AutoMapperBLLConfig.cs" />
+    <Compile Include="Infrastructure\PagingInfoDTO.cs" />
     <Compile Include="Infrastructure\ServiceModule.cs" />
     <Compile Include="Infrastructure\ValidationException.cs" />
     <Compile Include="Interfaces\ICommentService.cs" />
+    <Compile Include="Interfaces\IFollowerService.cs" />
     <Compile Include="Interfaces\ILocationService.cs" />
     <Compile Include="Interfaces\IPostService.cs" />
     <Compile Include="Interfaces\ITravelBlogsService.cs" />
     <Compile Include="Interfaces\IUserService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Services\CommentService.cs" />
+    <Compile Include="Services\FollowerService.cs" />
     <Compile Include="Services\LocationService.cs" />
     <Compile Include="Services\PostService.cs" />
     <Compile Include="Services\TravelBlogsService.cs" />
