--- a/TravelBlogs.BLL/TravelBlogs.BLL.csproj
+++ b/TravelBlogs.BLL/TravelBlogs.BLL.csproj
@@ -61,6 +61,7 @@
     <Reference Include="System" />
     <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Runtime.Caching" />
     <Reference Include="System.Web.Helpers, Version=3.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
       <HintPath>..\packages\Microsoft.AspNet.WebPages.3.2.3\lib\net45\System.Web.Helpers.dll</HintPath>
       <Private>True</Private>
@@ -105,6 +106,8 @@
     <Compile Include="DTO\UserDTO.cs" />
     <Compile Include="DTO\VoteDTO.cs" />
     <Compile Include="Infrastructure\AutoMapperBLLConfig.cs" />
+    <Compile Include="Infrastructure\ICacheService.cs" />
+    <Compile Include="Infrastructure\InMemoryCache.cs" />
     <Compile Include="Infrastructure\PagingInfoDTO.cs" />
     <Compile Include="Infrastructure\ServiceModule.cs" />
     <Compile Include="Infrastructure\ValidationException.cs" />
